--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@typegoose/typegoose": "^10.3.4",
         "@types/node": "18.15.10",
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
+        "bcrypt": "^5.1.0",
         "daisyui": "^2.51.5",
         "next": "13.2.4",
+        "next-auth": "^4.20.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "typescript": "5.0.2"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "autoprefixer": "^10.4.14",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.0",
