--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@google-cloud/storage": "^6.9.4",
         "@typegoose/typegoose": "^10.3.4",
         "@types/node": "18.15.10",
         "@types/react": "18.0.29",
