--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "slivki",
-    "private": true,
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -16,10 +15,10 @@
         "@types/react-dom": "18.0.11",
         "bcrypt": "^5.1.0",
         "daisyui": "^2.51.5",
-        "next": "13.2.4",
+        "next": "^13.3.0",
         "next-auth": "^4.20.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "sass": "^1.60.0",
         "swr": "^2.1.1",
         "typescript": "5.0.2"
