--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
         "@google-cloud/storage": "^6.9.4",
         "@heroicons/react": "^2.0.17",
         "@typegoose/typegoose": "^10.3.4",
-        "@types/node": "18.15.10",
-        "@types/react": "18.0.29",
-        "@types/react-dom": "18.0.11",
         "bcrypt": "^5.1.0",
         "daisyui": "^2.51.5",
         "next": "^13.3.1",
         "next-auth": "^4.20.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.60.0",
-        "server-only": "^0.0.1",
         "swr": "^2.1.1",
         "typescript": "5.0.2"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/node": "18.15.10",
+        "@types/react": "18.0.29",
+        "@types/react-dom": "18.0.11",
         "autoprefixer": "^10.4.14",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
         "prettier-plugin-tailwindcss": "^0.2.5",
-        "tailwindcss": "^3.2.7"
+        "tailwindcss": "^3.2.7",
+        "sass": "^1.60.0",
+        "server-only": "^0.0.1"
     },
     "lint-staged": {
         "*.{js,css,md,ts,tsx,json}": "prettier --write"
