--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@typegoose/typegoose": "^10.3.4",
         "bcrypt": "^5.1.0",
         "daisyui": "^2.51.5",
-        "next": "^13.3.1",
+        "next": "^13.4.0",
         "next-auth": "^4.20.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -31,9 +31,9 @@
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
         "prettier-plugin-tailwindcss": "^0.2.5",
-        "tailwindcss": "^3.2.7",
         "sass": "^1.60.0",
-        "server-only": "^0.0.1"
+        "server-only": "^0.0.1",
+        "tailwindcss": "^3.2.7"
     },
     "lint-staged": {
         "*.{js,css,md,ts,tsx,json}": "prettier --write"
