--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "name": "slivki",
     "scripts": {
         "dev": "next dev",
+        "test": "vitest",
+        "coverage": "vitest --coverage",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -25,17 +27,22 @@
         "@types/node": "18.15.10",
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
+        "@vitest/coverage-c8": "^0.31.1",
         "autoprefixer": "^10.4.14",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
         "prettier-plugin-tailwindcss": "^0.2.5",
+        "rollup-plugin-swc": "^0.2.1",
         "sass": "^1.60.0",
         "server-only": "^0.0.1",
-        "tailwindcss": "^3.2.7"
+        "tailwindcss": "^3.2.7",
+        "vite-tsconfig-paths": "^4.2.0",
+        "vitest": "^0.31.1",
+        "vitest-mock-extended": "^1.1.3"
     },
     "lint-staged": {
-        "*.{js,css,md,ts,tsx,json}": "prettier --write"
+        "*.{js,css,scss,md,ts,tsx,json}": "prettier --write"
     }
 }
