--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "next-auth": "^4.22.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-google-recaptcha": "^2.1.0",
         "swr": "^2.1.1",
         "typescript": "5.0.2"
     },
@@ -27,6 +28,7 @@
         "@types/node": "18.15.10",
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
+        "@types/react-google-recaptcha": "^2.1.5",
         "@vitest/coverage-c8": "^0.31.1",
         "autoprefixer": "^10.4.14",
         "husky": "^8.0.3",
