--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@heroicons/react": "^2.0.17",
         "@typegoose/typegoose": "^10.3.4",
         "bcrypt": "^5.1.0",
-        "daisyui": "^2.51.5",
+        "daisyui": "2.51.5",
         "next": "^13.4.0",
         "next-auth": "^4.22.1",
         "react": "^18.2.0",
